<resources>
    <string name="app_name">DEXTOL</string>
    <string name="title_activity_login">Sign in</string>

    <string name="family_members">Family Members</string>

    <string name="dash">DashBoard</string>
    <string name="appointments">Appointments</string>
    <string name="consultation">Online Consultation</string>
    <string name="orders">Orders</string>
    <string name="favourite">Favourites</string>
    <string name="medical">Medical Reports</string>
    <string name="settings">Settings</string>
    <string name="title_activity_navigayion">NAVIGATION</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="mobile_no">Mobile no</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont Have an Account?</string>
    <string name="register_here">Register Here</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header">Header</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="treatment_theraphy">Treatment/Theraphy</string>
    <string name="medical_stores">Medical Stores</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="otp">OTP</string>
    <string name="submit">Submit</string>
    <string name="user">User</string>
    <string name="service_provider">Service Provider</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="doctor">Doctor</string>
    <string name="all_healthcare_services_at_one_spot">All Healthcare Services At One Spot</string>
    <string name="add_family">Add Family</string>
    <string name="next">Next</string>
    <string name="age">Age</string>
    <string name="dob">DOB</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="register">Register</string>
    <string name="click_here_to_take_picture">click here to take picture</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="pincode">PinCode</string>
    <string name="book_now">Book Now</string>
    <string name="specialization">Specialization</string>
    <string name="select_date">Select Date</string>
    <string name="d_name">D_Name</string>
    <string name="location">Location</string>
    <string name="experience">Experience</string>
    <string name="fee">Fee</string>
    <string name="order_now">Order Now</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="timings">Timings</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="enter_medicine_required">Enter Medicine required</string>
    <string name="walkin">Walkin</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="record_name">Record Name</string>
    <string name="record_created_date">Record Created Date</string>
    <string name="record_description">Record Description</string>
    <string name="update">Update</string>
    <string name="update_details">Update Details</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="filters">Filters</string>
    <string name="sort_by">Sort By</string>
    <string name="profile_type">Profile Type</string>
    <string name="view_all">View All</string>
    <string name="title_activity_view__all__specialization">View_All_Specialization</string>
    <string name="title_activity_family_form1">Family_form1</string>
    <string name="title_activity_family__form2">Family_Form2</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dermatology">Dermatology</string>
    <string name="orthopedics">Orthopedics</string>
    <string name="gynacology">Gynacology</string>
    <string name="ent">ENT</string>
    <string name="pulmonology">Pulmonology</string>
    <string name="urology">Urology</string>
    <string name="general_physician">General Physician</string>
    <string name="discount">Discount</string>
    <string name="availability">Availability</string>
    <string name="male">Male</string>
    <string name="i_am">I Am</string>


</resources>
