<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dextol.dextol.serviceproviderFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/spname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="45dp"
            android:ems="15"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/spmobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:ems="15"
            android:hint="@string/mobile_no" />

        <EditText
            android:id="@+id/spemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:ems="15"
            android:hint="@string/email_address" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <CheckBox
                    android:id="@+id/cb1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/doctor" />

                <CheckBox
                    android:id="@+id/cb2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diagnostics" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <CheckBox
                    android:id="@+id/cb3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medical_stores" />

                <CheckBox
                    android:id="@+id/cb4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/treatment_theraphy" />

            </TableRow>


        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"


            android:ems="10"
            android:text="@string/generate_otp"
            android:textAllCaps="false" />


    </LinearLayout>

</FrameLayout>
