<LinearLayout
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/background"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center">
    <EditText
        android:id="@+id/order_medic_medic_req"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_medicine_required"/>
    </android.support.design.widget.TextInputLayout>

    <RadioButton
        android:id="@+id/order_medic_rb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:text="@string/home_delivery"/>

    <RadioButton
        android:layout_margin="5dp"
        android:id="@+id/order_medic_rb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/walkin"/>

    <Button
        android:id="@+id/btn_order_medic_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:textSize="14dp"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_shape"
        android:drawableEnd="@drawable/notes"
        android:textAllCaps="false"
        android:text="@string/upload_prescription"/>

    <Button
        android:id="@+id/btn_order_medic_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:background="@drawable/button_shape"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:text="@string/order_now"/>
</LinearLayout>