<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
     android:id="@+id/ff1_ll"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"

                android:inputType="text"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="number"
                android:maxLength="10"
                android:hint="@string/mobile_no" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <EditText
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/email_address" />
        </android.support.design.widget.TextInputLayout>



        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp">

            <TableRow>



                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="date"
                    android:hint="@string/dob" />


                <EditText
                    android:layout_width="0dp"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/age" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp">

            <TableRow>

                <EditText
                    android:layout_width="0dp"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="3"
                    android:hint="@string/height" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="3"
                    android:inputType="number"
                    android:hint="@string/weight" />



            </TableRow>

        </TableLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spgender"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.AppCompatSpinner>


        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sprelation"
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="25dp"
            android:layout_height="wrap_content">

        </android.support.v7.widget.AppCompatSpinner>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spblood"

            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.AppCompatSpinner>

        <Button
            android:id="@+id/alertb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_shape"
            style="@style/B_style"
            android:ems="8"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:textAllCaps="false" />


    </LinearLayout>

